--- a/css/styles.css
+++ b/css/styles.css
@@ -540,6 +540,8 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     flex-shrink: 0;
     padding-left: 16px;
     border-radius: 4px;
+    line-height: 2;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border: 1px solid #fff;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     outline: none;
@@ -632,7 +634,7 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     align-items: center;
     width: 24px;
     height: 24px;
-    border-radius: 100%;
+    border-radius: 50%;
     border: 1px solid rgba(0, 0, 0, 0.1);
     background-color: #e7e9fc;;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -647,7 +649,9 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-
+.modal-icon-close {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .modal-text {
     color: #2e2f42;;
     font-weight: 500;
@@ -703,6 +707,7 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     top: 50%;
     transform: translateY(-50%);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .modal-text-field-wrapper {
@@ -733,16 +738,17 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
 }
 
 .modal-text-field:focus {
-    border-color:#404BBF;
+    border-color:#4D5AE5;
 }
 
-.modal-check-wrapper {
+.modal-check-wrap {
     margin-bottom: 24px;
 }
 
 .modal-check-input:checked+.modal-check-text .modal-check-box {
     background-color: #404BBF;
     fill: #F4F4FD;
+    border: none;
 }
 
 .modal-check-text {
@@ -769,12 +775,12 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
 }
 
 .modal-icon-check {
- 
+   
 }
 
 .modal-link-pp {
     margin-left: 4px;
-    color: #434455;
+    color: #4d5ae5;
     text-decoration: underline;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     cursor: pointer;
@@ -782,7 +788,7 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
 
 .modal-link-pp:hover,
 .modal-link-pp:focus {
-    color: #4D5AE5;
+    color: #404bbf;
 }
 
 .modal-btn-sub {
