--- a/css/styles.css
+++ b/css/styles.css
@@ -815,5 +815,6 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
 
 .modal-btn-sub:hover,
 .modal-btn-sub:focus {
-    background-color: #404bbf;;
+    background-color: #404bbf;
+    fill: #ffffff;
 }
